# GolfIQ-YOLO

./: .coverage  .coveragerc  .dockerignore  .env.test  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.dev.md  README.md  REPORT.md  STATUS.md  docker-compose.staging.yml  docker-compose.yml  gradlew  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server_app.py  setup.cfg  tsconfig.shared.json  tsconfig.tools.json  vitest.config.ts  vitest.workspace.ts
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  coverage-baseline.json  coverage-policy.json  dependabot.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
arhud/: __init__.py  caddie_core_client.py  constants.py  distance_resolver.py  fallback_controller.py  gesture_controller.py  ground_fitter.py  hud_compositor.py  metrics.py  perf_overlay.py  pose_adapter.py  revalidation.py  smoothing.py  telemetry_client.py  timing.py
artifacts/: playslike-tempalt-report.txt
contracts/: api.openapi.yaml
cv_engine/: __init__.py  cli.py  types.py
demo_assets/: README.md
docs/: CODEMAP.md  DEMO_S16.md  GolfIQ_v1_launch.md  RUNBOOK_mobile.md  SHARING.md  WATCH_HUD_API.md  WATCH_PAIRING.md  accuracy-pack.md  api_ux_payload_v1.md  ar-hud-mobile-stubs.md  arhud-geospatial.md  arhud-mvp.md  arhud-overlay.md  arhud-qa-mode.md  arhud_recenter_v2.md  auto-hole.md  (+79 more)
(+2524 files in other folders)
