[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golfiq-yolo"
version = "0.1.0"
description = "GolfIQ: CV engine + FastAPI server (mock-friendly)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fatdevil" }]
dependencies = [
  "fastapi",
  "prometheus-client",
  "numpy>=1.26",
]

[project.optional-dependencies]
video = [
  "opencv-python-headless>=4.8",
  "imageio[ffmpeg]>=2.34",
]

[tool.setuptools.packages.find]
include = ["server*", "cv_engine*"]


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

 
